# layer-gateway-api-v1

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  layer-frontend-v1.code-workspace  pyproject.toml
.github/workflows/: ci.yml  docker-push.yml
app/: __init__.py  build_info.py  main.py
app/core/: config.py  logging.py  metrics.py  time_util.py
app/middleware/: access_log.py  auth.py  chat_limits.py  inflight.py  paths.py  request_context.py
app/routes/: admin_guest_history.py  auth.py  chat.py  conversations.py  feedback.py  health.py  metrics.py  profile.py  version.py
app/schemas/: chat_request.py  chat_response.py  conversations.py  (+4 more)
docs/: design.md  plan.md  schema.md  smoke-test.md
sql/: chat_events.sql  chat_history_rls.sql  message_feedback_cleanup_thumbs.sql  message_feedback_feedback_reason_constraint.sql  message_feedback_rls.sql  message_feedback_types.sql  username_login.sql
tests/: conftest.py  test_admin_guest_history_route.py  test_chat_conversation_id.py  test_chat_history_service.py  test_chat_latency.py  test_chat_limits.py  test_chat_persistence.py  test_chat_route.py  test_chat_usage.py  test_config_defaults.py  test_conversations_routes.py  test_feedback_route.py  test_feedback_schema.py  test_guest_chat_auth.py  test_health_route.py  test_jwt_auth.py  test_logging_format.py  test_message_feedback.py  test_metrics_route.py  test_orchestrator_client.py  test_orchestrator_logging.py  test_orchestrator_normalize.py  test_probe_access_log.py  test_redirect_auth.py  test_time_util.py  test_version.py
(+20 files in other folders)
