[project]
name = "layer-gateway-api-v1"
version = "0.1.0"
description = "Gateway API for frontend-to-orchestrator chat traffic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "PyJWT[crypto]>=2.8.0",
  "prometheus-client>=0.21.0",
  "pydantic-settings>=2.5.0",
  "python-json-logger>=2.0.7",
  "uvicorn>=0.30.0",
  "supabase>=2.10.0",
  "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
